Fix premium image shadow on mobile

--- a/docs/css/style-v11.css
+++ b/docs/css/style-v11.css
@@ -120,6 +120,7 @@ ul.sidenav code {
     width: 23px;
     height: 23px;
     vertical-align: middle;
+    box-shadow: none;
 }
 
 .table-of-contents {
